# applications_filepicker

./: .gitignore  OAT.xml  README.en.md  README.md  README_ZH.md  build-profile.json5  build.gradle  package-lock.json  package.json  settings.gradle
AppScope/: app.json5
audiopicker/: build-profile.json5  hvigorfile.ts
common/: package.json
feature/: Constants.ets  FileInfo.ets
hvigor/: hvigor-config.json5
oh_filemanger_6.1/filemanager/: .gitignore  (+10 more)
oh_filemanger_6.1/filemanager/common/src/main/cpp/: CMakeLists.txt  Security.cpp
oh_filemanger_6.1/filemanager/common/src/main/cpp/common/: common.h
oh_filemanger_6.1/filemanager/common/src/main/cpp/fileoperation/: file_util.cpp  file_util.h  listfile.cpp  listfile.h  napi_util.cpp  napi_util.h
oh_filemanger_6.1/filemanager/common/src/main/cpp/filequery/: file_producer.cpp  file_producer.h
oh_filemanger_6.1/filemanager/common/src/main/cpp/napi/: n_async_context.h  n_async_work_factory.h  n_async_work_promise.cpp  n_async_work_promise.h  n_error.cpp  n_error.h  n_func_arg.cpp  n_func_arg.h  n_ref.cpp  n_ref.h  n_val.cpp  n_val.h
oh_filemanger_6.1/filemanager/common/src/main/cpp/trash/: file_manager_errno.h  file_manager_utils.cpp  file_manager_utils.h  filemanager_db_manager.cpp  filemanager_db_manager.h  filemanager_rdb_instance.cpp  filemanager_rdb_instance.h  filemanager_rdb_trash.cpp  filemanager_rdb_trash.h  filemanager_rdb_utils.cpp  filemanager_rdb_utils.h  napi_module_trash.cpp  napi_module_trash.h  trash_data_struct.h  trash_utils.cpp  trash_utils.h
oh_filemanger_6.1/filemanager/common/src/main/cpp/types/libSecurity/: index.d.ts  oh-package.json5
oh_filemanger_6.1/filemanager/common/src/main/cpp/types/libTrash/: index.d.ts  oh-package.json5
oh_filemanger_6.1/filemanager/common/src/main/cpp/utils/: file_manager_operation_struct.h  log.h
signature/: UnsgnedReleasedProfileTemplate.json  applications.p7b  filepicker.p7b  sign_files.rar
(+867 files in other folders)
